--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ Islamic Azad University at Najafabad</p>
 
 <p>Shirin Nilizadeh, Apu Kapadia, and Yong-Yeol Ahn, "<a href="papers/nilizadeh-deanon-2014.pdf">Community-Enhanced De-anonymization of Online Social Networks</a>," In Proceedings of 21st ACM Conference on Computer and Communications Security (CCS ’14), Arizona, USA, 2014. (Acceptance rate: 19%) [<a href="bibs/deanon-ccs14.bib">bibtex</a>][<a href="ppts/deAnon-ccs-2014.pptx">ppt</a>] </p>
 
-<p>Shirin Nilizadeh, "<a href="papers/nilizadeh-phd-dissertation.pdf">Privacy-aware Decentralized Architectures for Socially Networked Systems</a>," Ph.D. Thesis, Indiana University Bloomington, Semtember 2014. <a href="bibs/nilizadeh-phd-thesis.bib">bibtex</a>] </p>
+<p>Shirin Nilizadeh, "<a href="papers/nilizadeh-phd-dissertation.pdf">Privacy-aware Decentralized Architectures for Socially Networked Systems</a>," Ph.D. Thesis, Indiana University Bloomington, Semtember 2014. [<a href="bibs/nilizadeh-phd-thesis.bib">bibtex</a>] </p>
 
 <p>Vaibhav Garg and Shirin Nilizadeh, "<a href="papers/nilizadeh-craigslist-iwcc13.pdf">Craigslist Scams and Community Composition: Investigating Online Fraud Victimization</a>," IEEE International Workshop on Cyber Crime (IWCC 2013), San Francisco, USA, May, 2013. [<a href="bibs/garg2013craigslist.bib">bibtex</a>][ieee] </p>
 
