--- a/index.html
+++ b/index.html
@@ -84,33 +84,33 @@ Islamic Azad University at Najafabad</p>
 <h3>
 <font color="#990000"><a id="publications" class="anchor" href="#publication" aria-hidden="true"><span class="octicon octicon-link"></span></a>Publications</font></h3>
 
-<p>Shirin Nilizadeh, Apu Kapadia, and Yong-Yeol Ahn, "<a href="papers/nilizadeh-deanon-2014.pdf">Community-Enhanced De-anonymization of Online Social Networks</a>," In Proceedings of 21st ACM Conference on Computer and Communications Security (CCS ’14), Arizona, USA, 2014. (Acceptance rate: 19%) [<a href="bibs/deanon-ccs14.bib">bibtex</a>][<a href="ppts/deAnon-ccs-2014.pptx">ppt</a>] </p>
+<p>Shirin Nilizadeh, Apu Kapadia, and Yong-Yeol Ahn, "<a href="papers/nilizadeh-deanon-2014.pdf">Community-Enhanced De-anonymization of Online Social Networks</a>," In Proceedings of 21st ACM Conference on Computer and Communications Security (CCS ’14), Arizona, USA, 2014. (Acceptance rate: 19%) [<a href="bibs/deanon-ccs14.bib">bibtex</a>][<a href="ppts/deAnon-ccs-2014.pptx">Slides</a>] </p>
 
 <p>Shirin Nilizadeh, "<a href="papers/nilizadeh-phd-dissertation.pdf">Privacy-aware Decentralized Architectures for Socially Networked Systems</a>," Ph.D. Thesis, Indiana University Bloomington, Semtember 2014. [<a href="bibs/nilizadeh-phd-thesis.bib">bibtex</a>] </p>
 
 <p>Vaibhav Garg and Shirin Nilizadeh, "<a href="papers/nilizadeh-craigslist-iwcc13.pdf">Craigslist Scams and Community Composition: Investigating Online Fraud Victimization</a>," IEEE International Workshop on Cyber Crime (IWCC 2013), San Francisco, USA, May, 2013. [<a href="bibs/garg2013craigslist.bib">bibtex</a>] </p>
 
-<p>Shirin Nilizadeh, Sonia Jahid, Prateek Mittal, Nikita Borisov, and Apu Kapadia, "<a href="papers/nilizadeh-cachet-conext12.pdf">Cachet: A Decentralized Architecture for Privacy Preserving Social Networking with Caching</a>," In Proceedings of 8th ACM International Conference on emerging Networking EXperiments and Technologies (ACM CoNEXT), Nice, France, Dec. 2012. [<a href="bibs/cachet-conext.bib">bibtex</a>][<a href="ppts/conext-cachet.pptx">ppt</a>] </p>
+<p>Shirin Nilizadeh, Sonia Jahid, Prateek Mittal, Nikita Borisov, and Apu Kapadia, "<a href="papers/nilizadeh-cachet-conext12.pdf">Cachet: A Decentralized Architecture for Privacy Preserving Social Networking with Caching</a>," In Proceedings of 8th ACM International Conference on emerging Networking EXperiments and Technologies (ACM CoNEXT), Nice, France, Dec. 2012. [<a href="bibs/cachet-conext.bib">bibtex</a>][<a href="ppts/conext-cachet.pptx">Slides</a>] </p>
 
-<p>Sonia Jahid, Shirin Nilizadeh, Prateek Mittal, Nikita Borisov, and Apu Kapadia, "<a href="papers/nilizadeh-decent-sesoc12.pdf">DECENT: A Decentralized Architecture for Enforcing Privacy in Online Social Networks</a>," The 4th IEEE International Workshop on Security and Social Networking (SESOC '12), Lugano, Switzerland, Mar 19, 2012. (Acceptance rate: 29%) [<a href="bibs/decent-sesoc.bib">bibtex</a>][<a href="ppts/decent-sesoc2012.pptx">ppt</a>] </p>
+<p>Sonia Jahid, Shirin Nilizadeh, Prateek Mittal, Nikita Borisov, and Apu Kapadia, "<a href="papers/nilizadeh-decent-sesoc12.pdf">DECENT: A Decentralized Architecture for Enforcing Privacy in Online Social Networks</a>," The 4th IEEE International Workshop on Security and Social Networking (SESOC '12), Lugano, Switzerland, Mar 19, 2012. (Acceptance rate: 29%) [<a href="bibs/decent-sesoc.bib">bibtex</a>][<a href="ppts/decent-sesoc2012.pptx">Slides</a>] </p>
 
-<p>Shirin Nilizadeh, Naveed Alam, Nathaniel Husted, and Apu Kapadia, "<a href="papers/nilizadeh-pythia-wpes11.pdf">Pythia: A Privacy Aware, Peer-to-Peer Network for Social Search</a>," In Proceedings of 2011 ACM Workshop on Privacy in the Electronic Society (WPES '11), pp. 43--48, Chicago, Illinois, October 17, 2011. (Acceptance rate: 28%) [<a href="bibs/">bibtex</a>][<a href="ppts/WPES-pythia.pptx">ppt</a>] </p>
+<p>Shirin Nilizadeh, Naveed Alam, Nathaniel Husted, and Apu Kapadia, "<a href="papers/nilizadeh-pythia-wpes11.pdf">Pythia: A Privacy Aware, Peer-to-Peer Network for Social Search</a>," In Proceedings of 2011 ACM Workshop on Privacy in the Electronic Society (WPES '11), pp. 43--48, Chicago, Illinois, October 17, 2011. (Acceptance rate: 28%) [<a href="bibs/">bibtex</a>][<a href="ppts/WPES-pythia.pptx">Slides</a>] </p>
 
 <p>Shirin Nilizadeh, Naveed Alam, Nathaniel Husted, and Apu Kapadia. "<a href="papers/nilizadeh-pythia-techReport10.pdf">Pythia: A Privacy Aware, Peer-to-Peer Network for Social Search</a>," Technical Report TR687, Indiana University Bloomington, Oct. 2010. [<a href="bibs/TR687.bib">bibtex</a>][<a href="https://www.cs.indiana.edu/cgi-bin/techreports/TRNNN.cgi?trnum=TR687">iu-link</a>] </p>
 
-<p>Shirin Nilizadeh, and Babak Sadeghiyan, "<a href="papers/nilizadeh-linear-cryotanalysis.pdf">Linear Approximations Representation of Moamagar Block Cipher</a>," 12th International Conference on Computer Science (CSICC), Iran, 2007. (in Persian) </p>
+<p>Shirin Nilizadeh, and Babak Sadeghiyan, "<a href="papers/nilizadeh-linear-cryotanalysis.pdf">Linear Approximations Representation of Moamagar Block Cipher</a>," 12th International Conference on Computer Science (CSICC), Iran, 2007. </p>
   </section>
     <section>
 <h3>
 <font color="#990000"><a id="talks" class="anchor" href="#talks" aria-hidden="true"><span class="octicon octicon-link"></span></a>Talks</font></h3>
 
-<p>“Twitter’s Reaction on Revelations about Government’s Internet Surveillance program”, The Workshop on Surveillance & Technology (SAT) held with the Privacy Enhancing Technologies Symposium (PETS), June 29th, 2015. [Slides] </p>
+<p>“Twitter’s Reaction on Revelations about Government’s Internet Surveillance program,” The Workshop on Surveillance & Technology (SAT) held with the Privacy Enhancing Technologies Symposium (PETS), June 29th, 2015. [<a href="ppts/sat-2015.pptx">Slides</a>] </p>
 
-<p> “Community-Enhanced De-anonymization of Online Social Networks,” The 21st ACM Conference on Computer and Communications Security (CCS’14), Scottsdale, Arizona, USA, November 3-7, 2014. [Slides] </p>
+<p> “Community-Enhanced De-anonymization of Online Social Networks,” The 21st ACM Conference on Computer and Communications Security (CCS’14), Scottsdale, Arizona, USA, November 3-7, 2014. [<a href="ppts/deAnon-ccs-2014.pptx">Slides</a>] </p>
 
 <p> “Privacy-aware Decentralized Architectures for Socially Networked Systems,” Student Knowledge Exchange on Technical Aspects of Privacy, University of Notre Dame, September 2013. [Slides] </p>
 
-<p>“Pythia: A Privacy Aware, Peer-to-Peer Network for Social Search,” 2011 ACM Workshop on Privacy in the Electronic Society (WPES ’11), Chicago, Illinois, October 2011. [Slides]</p>
+<p>“Pythia: A Privacy Aware, Peer-to-Peer Network for Social Search,” 2011 ACM Workshop on Privacy in the Electronic Society (WPES ’11), Chicago, Illinois, October 2011. [<a href="ppts/WPES-pythia.pptx">Slides</a>]</p>
 
 <p> “Linear Approximations Representation of Moamagar Block Cipher,” 12th International Conference on Computer Science (CSICC), Shahid Beheshti University (SBU), Tehran, Iran, February 2007. [Slides]</p>
   </section>
@@ -118,15 +118,15 @@ Islamic Azad University at Najafabad</p>
 <h3>
 <font color="#990000"><a id="posters" class="anchor" href="#posters" aria-hidden="true"><span class="octicon octicon-link"></span></a>Posters</font></h3>
 
-<p> Shirin Nilizadeh, "Community-enhanced De-anonymization of Social Networks", Women in Cyber Security, April 2014. [pdf] </p>
+<p> Shirin Nilizadeh, "Community-enhanced De-anonymization of Social Networks," Women in Cyber Security, April 2014. [pdf] </p>
 
-<p> Shirin Nilizadeh, Sonia Jahid, Prateek Mittal, Nikita Borisov and Apu Kapadia, "Cachet: A Decentralized Architecture for Privacy Preserving Social Networking with Caching", Grace Hopper Celebration of Women in Computing, 2012.[pdf]</p>
+<p> Shirin Nilizadeh, Sonia Jahid, Prateek Mittal, Nikita Borisov and Apu Kapadia, "Cachet: A Decentralized Architecture for Privacy Preserving Social Networking with Caching," Grace Hopper Celebration of Women in Computing, 2012.[pdf]</p>
 
-<p> Shirin Nilizadeh, Sonia Jahid, Prateek Mittal, Nikita Borisov and Apu Kapadia, "DECENT: A Decentralized Architecture for Enforcing Privacy in Online Sociclai Networks", Indiana Celebration of Women in Computing (InWIC), 2012. [pdf] [Winner of Best Graduate Poster Award] </p>
+<p> Shirin Nilizadeh, Sonia Jahid, Prateek Mittal, Nikita Borisov and Apu Kapadia, "DECENT: A Decentralized Architecture for Enforcing Privacy in Online Sociclai Networks," Indiana Celebration of Women in Computing (InWIC), 2012. [pdf] [Winner of Best Graduate Poster Award] </p>
 
-<p> Azadeh Nematzadeh and Shirin Nilizadeh, "Classification Approach toward Craigslist Scam Detection", Graduate cohort workshop, Boston, 2011. </p>
+<p> Azadeh Nematzadeh and Shirin Nilizadeh, "Classification Approach toward Craigslist Scam Detection," Graduate cohort workshop, Boston, 2011. </p>
 
-<p> Shirin Nilizadeh, Naveed Alam, Apu Kapadia, "Peer-to-Peer Aardvark", Indiana Celebration of Women in Computing (InWIC), 2010. [pdf] [Runner up for the Best Graduate Poster Award]</p>
+<p> Shirin Nilizadeh, Naveed Alam, Apu Kapadia, "Peer-to-Peer Aardvark," Indiana Celebration of Women in Computing (InWIC), 2010. [pdf] [Runner up for the Best Graduate Poster Award]</p>
       </section>
       <footer>
         
