--- a/index.html
+++ b/index.html
@@ -118,15 +118,15 @@ Islamic Azad University at Najafabad</p>
 <h3>
 <font color="#990000"><a id="posters" class="anchor" href="#posters" aria-hidden="true"><span class="octicon octicon-link"></span></a>Posters</font></h3>
 
-<p> Shirin Nilizadeh, "Community-enhanced De-anonymization of Social Networks," Women in Cyber Security, April 2014. [pdf] </p>
+<p> Shirin Nilizadeh, "Community-enhanced De-anonymization of Social Networks," Women in Cyber Security, April 2014. [<a href="posters/deAnon-poster.pdf">pdf</a>] </p>
 
-<p> Shirin Nilizadeh, Sonia Jahid, Prateek Mittal, Nikita Borisov and Apu Kapadia, "Cachet: A Decentralized Architecture for Privacy Preserving Social Networking with Caching," Grace Hopper Celebration of Women in Computing, 2012.[pdf]</p>
+<p> Shirin Nilizadeh, Sonia Jahid, Prateek Mittal, Nikita Borisov and Apu Kapadia, "Cachet: A Decentralized Architecture for Privacy Preserving Social Networking with Caching," Grace Hopper Celebration of Women in Computing, 2012.[<a href="posters/Cachet-poster.pdf">pdf</a>]</p>
 
-<p> Shirin Nilizadeh, Sonia Jahid, Prateek Mittal, Nikita Borisov and Apu Kapadia, "DECENT: A Decentralized Architecture for Enforcing Privacy in Online Sociclai Networks," Indiana Celebration of Women in Computing (InWIC), 2012. [pdf] [Winner of Best Graduate Poster Award] </p>
+<p> Shirin Nilizadeh, Sonia Jahid, Prateek Mittal, Nikita Borisov and Apu Kapadia, "DECENT: A Decentralized Architecture for Enforcing Privacy in Online Sociclai Networks," Indiana Celebration of Women in Computing (InWIC), 2012. [<a href="posters/DECENT-poster.pdf">pdf</a>] [Winner of Best Graduate Poster Award] </p>
 
 <p> Azadeh Nematzadeh and Shirin Nilizadeh, "Classification Approach toward Craigslist Scam Detection," Graduate cohort workshop, Boston, 2011. </p>
 
-<p> Shirin Nilizadeh, Naveed Alam, Apu Kapadia, "Peer-to-Peer Aardvark," Indiana Celebration of Women in Computing (InWIC), 2010. [pdf] [Runner up for the Best Graduate Poster Award]</p>
+<p> Shirin Nilizadeh, Naveed Alam, Apu Kapadia, "Peer-to-Peer Aardvark," Indiana Celebration of Women in Computing (InWIC), 2010. [<a href="posters/p2p-aardvark.pdf">pdf</a>] [Runner up for the Best Graduate Poster Award]</p>
       </section>
       <footer>
         
