--- a/index.html
+++ b/index.html
@@ -122,11 +122,11 @@ Islamic Azad University at Najafabad</p>
 
 <p> Shirin Nilizadeh, Sonia Jahid, Prateek Mittal, Nikita Borisov and Apu Kapadia, "Cachet: A Decentralized Architecture for Privacy Preserving Social Networking with Caching," Grace Hopper Celebration of Women in Computing, 2012.[<a href="posters/Cachet-poster.pdf">pdf</a>]</p>
 
-<p> Shirin Nilizadeh, Sonia Jahid, Prateek Mittal, Nikita Borisov and Apu Kapadia, "DECENT: A Decentralized Architecture for Enforcing Privacy in Online Sociclai Networks," Indiana Celebration of Women in Computing (InWIC), 2012. [<a href="posters/DECENT-poster.pdf">pdf</a>] [Winner of Best Graduate Poster Award] </p>
+<p> Shirin Nilizadeh, Sonia Jahid, Prateek Mittal, Nikita Borisov and Apu Kapadia, "DECENT: A Decentralized Architecture for Enforcing Privacy in Online Sociclai Networks," Indiana Celebration of Women in Computing (InWIC), 2012. [<a href="posters/DECENT-poster.pdf">pdf</a>] [<strong>Winner of Best Graduate Poster Award</strong>] </p>
 
 <p> Azadeh Nematzadeh and Shirin Nilizadeh, "Classification Approach toward Craigslist Scam Detection," Graduate cohort workshop, Boston, 2011. </p>
 
-<p> Shirin Nilizadeh, Naveed Alam, Apu Kapadia, "Peer-to-Peer Aardvark," Indiana Celebration of Women in Computing (InWIC), 2010. [<a href="posters/p2p-aardvark.pdf">pdf</a>] [Runner up for the Best Graduate Poster Award]</p>
+<p> Shirin Nilizadeh, Naveed Alam, Apu Kapadia, "Peer-to-Peer Aardvark," Indiana Celebration of Women in Computing (InWIC), 2010. [<a href="posters/p2p-aardvark.pdf">pdf</a>] [<strong>Runner up for the Best Graduate Poster Award</strong>]</p>
       </section>
       <footer>
         
