--- a/index.html
+++ b/index.html
@@ -29,8 +29,18 @@
            Office:  Harold Frank Hall, Room 2114 </h4>
 
       </header>
-            <section>
-        <h3>
+<section>
+<ul id="list-nav">
+  <li><a href="#bio">About Me</a></li>
+  <li><a href="#Latest News">News</a></li>
+  <li><a href="#education">Education</a></li>
+  <li><a href="#publication">  Publications</a></li>
+  <li><a href="#talks">Talks</a></li>
+  <li><a href="#posters">Posters</a></li>
+</ul>
+</section>
+<section>
+<h3>
 <font color="#990000"><a id="bio" class="anchor" href="#bio" aria-hidden="true"><span class="octicon octicon-link"></span></a>About Me</font>
 </h3>
 <p>
