--- a/index.html
+++ b/index.html
@@ -23,20 +23,26 @@
             <a href="https://www.cs.ucsb.edu"> Computer Science Department </a><br>
             <a href="http://www.ucsb.edu"> UC at Santa Barbara </a> </h3>
         </p>
-        <br>
-        <h4> Contact Info: <br>
-        Email: nilizadeh &lt;at &gt;cs &lt;dot&gt;ucsb&lt;dot&gt;edu <br>
+       <p> <h4> 
+        Email: nilizadeh&lt;at&gt;cs&lt;dot&gt;ucsb&lt;dot&gt;edu <br>
            Office:  Harold Frank Hall, Room 2114 </h4>
+           </p>
+      <ul id="list-nav">
+  <li><a href="#education">Education</a></li>
+  <li><a href="#publication">  Publications</a></li>
+  <li><a href="#talks">Talks</a></li>
+  <li><a href="#posters">Posters</a></li>
+</ul>
 
       </header>
-<section>
+<!--<section>
 <ul id="list-nav">
   <li><a href="#education">Education</a></li>
   <li><a href="#publication">  Publications</a></li>
   <li><a href="#talks">Talks</a></li>
   <li><a href="#posters">Posters</a></li>
 </ul>
-</section>
+</section> -->
 
 <section>
   <br>
