--- a/index.html
+++ b/index.html
@@ -27,22 +27,16 @@
         Email: nilizadeh&lt;at&gt;cs&lt;dot&gt;ucsb&lt;dot&gt;edu <br>
            Office:  Harold Frank Hall, Room 2114 
            </p>
-      <ul id="list-nav">
-  <li><a href="#education">Education</a></li>
-  <li><a href="#publication">  Publications</a></li>
-  <li><a href="#talks">Talks</a></li>
-  <li><a href="#posters">Posters</a></li>
-</ul>
 
       </header>
-<!--<section>
+<section>
 <ul id="list-nav">
   <li><a href="#education">Education</a></li>
   <li><a href="#publication">  Publications</a></li>
   <li><a href="#talks">Talks</a></li>
   <li><a href="#posters">Posters</a></li>
 </ul>
-</section> -->
+</section> 
 
 <section>
   <br>
