--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             <a href="https://www.cs.ucsb.edu"> Computer Science Department </a><br>
             <a href="http://www.ucsb.edu"> UC at Santa Barbara </a> </h3>
         </p>
-       <p>
+       <p color="black">
         Email: nilizadeh&lt;at&gt;cs&lt;dot&gt;ucsb&lt;dot&gt;edu <br>
-           Office:  Harold Frank Hall, Room 2114 
+        Office:  Harold Frank Hall, Room 2114 
            </p>
 
       </header>
