--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="https://www.cs.ucsb.edu"> Computer Science Department </a><br>
             <a href="http://www.ucsb.edu"> UC at Santa Barbara </a> </h3>
         </p>
-       <p color="black">
+       <p style="color:black">
         Email: nilizadeh&lt;at&gt;cs&lt;dot&gt;ucsb&lt;dot&gt;edu <br>
         Office:  Harold Frank Hall, Room 2114 
            </p>
