--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <a href="http://www.ucsb.edu"> UC at Santa Barbara </a> </h3>
         </p>
        <p style="color:black">
-        Email: nilizadeh&lt;at&gt;cs&lt;dot&gt;ucsb&lt;dot&gt;edu <br>
-        Office:  Harold Frank Hall, Room 2114 
+        Email: nilizadeh&lt;at&gt;cs.ucsb.edu <br>
+        Office: Harold Frank Hall, Rm 2114 
            </p>
 
       </header>
