--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <section>
 <ul id="list-nav">
   <li><a href="#education">Education</a></li>
-  <li><a href="#publication">Publications</a></li>
+  <li><a href="#publications">Publications</a></li>
   <li><a href="#talks">Talks</a></li>
   <li><a href="#posters">Posters</a></li>
 </ul>
@@ -92,7 +92,7 @@ Islamic Azad University at Najafabad</p>
   </section>
     <section>
 <h3>
-<font color="#990000"><a id="publications" class="anchor" href="#publication" aria-hidden="true"><span class="octicon octicon-link"></span></a>Publications</font></h3>
+<font color="#990000"><a id="publications" class="anchor" href="#publications" aria-hidden="true"><span class="octicon octicon-link"></span></a>Publications</font></h3>
 
 <p>Shirin Nilizadeh, Apu Kapadia, and Yong-Yeol Ahn, "<a href="papers/nilizadeh-deanon-2014.pdf">Community-Enhanced De-anonymization of Online Social Networks</a>," In Proceedings of 21st ACM Conference on Computer and Communications Security (CCS ’14), Arizona, USA, 2014. (Acceptance rate: 19%) [<a href="bibs/deanon-ccs14.bib">bibtex</a>][<a href="ppts/deAnon-ccs-2014.pptx">Slides</a>] </p>
 
