--- a/index.html
+++ b/index.html
@@ -47,8 +47,12 @@
   I am currently a postdoctoral researcher at Security Group (seclab) at UCSB. I received my Ph.D. in Security Informatics from IUB in September 2014. 
   Following my doctorate, I joint the Center for Complex Networks and Systems Research (CNetS) and Privacy Lab at IUB as a postdoctoral researcher. </p>
 <p>  
- I am interested in topics intersecting ‘Security and Privacy’ and ‘Network Science’. 
- I am particularly interested in Security and Privacy in Online Social Networks and Peer-to-Peer Networks, Privacy and Anonymity in Big Data, Applied Cryptography, Applied Machine Learning and Data Mining. 
+ Generally, I am interested in building secure and privacy preserving social systems 
+ as well as analyizing users' privacy and anonymity behavior in big data.
+ My current interests include the topics intersecting ‘Security and Privacy’ and ‘Network Science’, particularly 
+ Security and Privacy in Online Social Networks.
+ In my research I apply techniques from computer networks, Peer-to-Peer Networks, Distributed Systems, Applied Cryptography, 
+ Large-Scale Machine Learning and Data Mining. 
  
 </p>
 </section>
