--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   Following my doctorate, I joint the Center for Complex Networks and Systems Research (CNetS) and Privacy Lab at IUB as a postdoctoral researcher. </p>
 <p>  
  Generally, I am interested in building secure and privacy preserving social systems 
- as well as analyizing users' privacy and anonymity behavior in big data. In my research I have applied techniques
+ as well as analyzing users' privacy and anonymity behavior in big data. In my research I have applied techniques
  from computer networks, Peer-to-Peer Networks, Distributed Systems, Applied Cryptography, 
  Large-Scale Machine Learning and Data Mining.
   </p>
