--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <p>  
  Generally, I am interested in building secure and privacy preserving social systems 
  as well as analyzing users' privacy and anonymity behavior in big data. In my research I have applied techniques
- from computer networks, Peer-to-Peer Networks, Distributed Systems, Applied Cryptography, 
+ from Computer Networks, Peer-to-Peer Networks, Distributed Systems, Applied Cryptography, 
  Large-Scale Machine Learning and Data Mining.
   </p>
  <p>
