--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 <strong>Jul 2015</strong>: Joint the Program Committee of WWW 2016 <br>
 <strong>Jul 2015</strong>: Joint the Program Committee of PETS 2016 <br>
 <strong>Jun 2015</strong>: Talked about "Twitter's Reaction on Revelations about Government's Internet Surveillance program" at SAT held with PETS 2015 <br>
+<strong>Apr 2015</strong>: Our paper "A Gendered Public Sphere: Who’s Heard the Most in Twitter" got accepted to 2015 Computational Social Science Summit <br>
 <strong>Jul 2014</strong>: Our paper "Community-enhanced de-anonymization of Online Social Networks" got accepted to ACM CCS 2014. <br>
 <strong>Oct 2014</strong>: Joint Privacy Lab and CNET at IUB as a postdoctoral researcher <br>
 <strong>Jun 2014</strong>: Successfully defended my Ph.D. dissertation</p>
