--- a/index.html
+++ b/index.html
@@ -101,7 +101,10 @@ Islamic Azad University at Najafabad</p>
     <section>
 <h3>
 <font color="#990000"><a id="publications" class="anchor" href="#publications" aria-hidden="true"><span class="octicon octicon-link"></span></a>Publications</font></h3>
-
+<p> Shirin Nilizadeh, Anne Groggel, Peter Lista, Srijita Das, Yong-Yeol Ahn, Apu Kapadia, and Fabio Rojas,
+"Twitter's Glass Ceiling: The Effect of Perceived Gender on Online Visibility,"
+To appear In Proceedings of The International AAAI Conference on Web and Social Media (ICWSM '16),
+Cologne, Germany, May 17–20, 2016.</p>
 <p>Shirin Nilizadeh, Apu Kapadia, and Yong-Yeol Ahn, "<a href="papers/nilizadeh-deanon-2014.pdf">Community-Enhanced De-anonymization of Online Social Networks</a>," In Proceedings of 21st ACM Conference on Computer and Communications Security (CCS ’14), Arizona, USA, 2014. (Acceptance rate: 19%) [<a href="bibs/deanon-ccs14.bib">bibtex</a>][<a href="ppts/deAnon-ccs-2014.pptx">Slides</a>] </p>
 
 <p>Shirin Nilizadeh, "<a href="papers/nilizadeh-phd-dissertation.pdf">Privacy-aware Decentralized Architectures for Socially Networked Systems</a>," Ph.D. Thesis, Indiana University Bloomington, Semtember 2014. [<a href="bibs/nilizadeh-phd-thesis.bib">bibtex</a>] </p>
