--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 </h3>
 
 <p>
+<strong>Feb 2016</strong>: Received an IEEE S&P travel award  <br>
 <strong>Feb 2016</strong>: Our paper "Twitter's Glass Ceiling: The Effect of Perceived Gender on Online Visibility" got accepted to ICWSM 2016. <br>
 <strong>Aug 2015</strong>: Joint Seclab at UCSB <br>
 <strong>Jul 2015</strong>: Joint the Program Committee of WWW 2016 <br>
