--- a/index.html
+++ b/index.html
@@ -43,19 +43,25 @@
 <h3>
 <font color="#990000"><a id="bio" class="anchor" href="#bio" aria-hidden="true"><span class="octicon octicon-link"></span></a>About Me</font>
 </h3>
+  <p>
+I am currently a postdoctoral researcher at seclab, University of California at Santa Barbara. 
+I received my Ph.D. in Security Informatics from IUB in September 2014. 
+Following my doctorate, I joint the Center for Complex Networks and Systems Research (CNetS)
+and Privacy Lab at IUB as a postdoctoral researcher.
+  </p>    
+
 <p>
-  I am currently a postdoctoral researcher at Security Group (seclab) at UCSB. I received my Ph.D. in Security Informatics from IUB in September 2014. 
-  Following my doctorate, I joint the Center for Complex Networks and Systems Research (CNetS) and Privacy Lab at IUB as a postdoctoral researcher. </p>
-<p>  
- Generally, I am interested in building secure and privacy preserving social systems 
- as well as analyzing users' privacy and anonymity behavior in big data. In my research I have applied techniques
- from Computer Networks, Peer-to-Peer Networks, Distributed Systems, Applied Cryptography, 
- Large-Scale Machine Learning and Data Mining.
+My research interests span various topics in computer security including: 
+  (a) building secure and privacy preserving systems, 
+  (b) detecting and preventing malicious and abusive activities/content on online communities,  
+  (c) (de-) anonymizing social networks data, 
+  (d) modeling user security and privacy behavior/interactions through big data analysis, and
+  (e) security and privacy in Internet of Things. 
   </p>
- <p>
- My current interests include the topics intersecting ‘Security and Privacy’ and ‘Network Science’, particularly 
- Security and Privacy in Online Social Networks.
- 
+<p>
+  In my research I have applied techniques from privacy enhancing technologies, 
+    computer networks including P2P networks and distributed systems,
+    applied cryptography, machine Learning, data mining and complex networks/network science. 
 </p>
 </section>
       <section>
