--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <font color="#990000"><a id="bio" class="anchor" href="#bio" aria-hidden="true"><span class="octicon octicon-link"></span></a>About Me</font>
 </h3>
   <p>
-I am currently a postdoctoral researcher at seclab, University of California at Santa Barbara. 
+I am currently a postdoctoral researcher at seclab, UC at Santa Barbara. 
 I received my Ph.D. in Security Informatics from IUB in September 2014. 
 Following my doctorate, I joint the Center for Complex Networks and Systems Research (CNetS)
 and Privacy Lab at IUB as a postdoctoral researcher.
