--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </h3>
   <p>
 I am currently a postdoctoral researcher at seclab, UC at Santa Barbara. 
-I received my Ph.D. in Security Informatics from IUB in September 2014. 
+I received my Ph.D. in Security Informatics from Indiana University Bloomington in September 2014. 
 Following my doctorate, I joint the Center for Complex Networks and Systems Research (CNetS)
 and Privacy Lab at IUB as a postdoctoral researcher.
   </p>    
