--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-       <p> <img align="left" src="shirin.jpg" width="150" height="178" hspace="20" vspace ="20"/> </p> <br style="clear:both" />
+       <p> <img align="left" src="DSC_0006_edited.JPG" width="150" height="178" hspace="20" vspace ="20"/> </p> <br style="clear:both" />
        <p> <h2><font color="#990000">Shirin Nilizadeh, Ph.D. </font></h2> 
        <h3>Postdoctoral Researcher<br> </h3> </p>
         <p>
@@ -51,12 +51,11 @@ and Privacy Lab at IUB as a postdoctoral researcher.
   </p>    
 
 <p>
-My research interests span various topics in computer security including: 
-  (a) building secure and privacy preserving systems, 
-  (b) detecting and preventing malicious and abusive activities/content on online communities,  
-  (c) (de-) anonymizing social networks data, 
-  (d) modeling user security and privacy behavior/interactions through big data analysis, and
-  (e) security and privacy in Internet of Things. 
+My research interests span various topics in computer security and privacy including: 
+  (a) Detecting and preventing malicious and abusive activities or content, <br>
+  (b) Building secure and privacy preserving (social) systems, <br>
+  (c) User and data privacy in the era of big data, <br>
+  (d) Social computing.  
   </p>
 <p>
   In my research I have applied techniques from privacy enhancing technologies, 
@@ -70,6 +69,7 @@ My research interests span various topics in computer security including:
 </h3>
 
 <p>
+<strong>Jan 2017</strong>: Gave a talk at Network Science IGERT <br> 
 <strong>July 2016</strong>: Joint the shadow program committee of ASIACCS 2017 <br> 
 <strong>Apr 2016</strong>: Received an IEEE S&P travel award  <br>
 <strong>Feb 2016</strong>: Our paper "Twitter's Glass Ceiling: The Effect of Perceived Gender on Online Visibility" got accepted to ICWSM 2016. <br>
@@ -132,8 +132,10 @@ Cologne, Germany, May 17–20, 2016. (Acceptance rate: 17%) </p>
     <section>
 <h3>
 <font color="#990000"><a id="talks" class="anchor" href="#talks" aria-hidden="true"><span class="octicon octicon-link"></span></a>Talks</font></h3>
+      
+<p>“Twitter's Glass Ceiling: The Effect of Perceived Gender on Online Visibility,” <a href="http://networkscience.igert.ucsb.edu/education/seminar595j"> Network Science IGERT Seminars </a>, UCSB, Januray 18th, 2017. [<a href="ppts/twitter-glass-ceiling-2015.pptx">Slides</a>] </p>
 
-<p>“Twitter’s Reaction on Revelations about Government’s Internet Surveillance program,” The Workshop on Surveillance & Technology (SAT) held with the Privacy Enhancing Technologies Symposium (PETS), June 29th, 2015. [<a href="ppts/sat-2015.pptx">Slides</a>] </p>
+<p>“Twitter’s Reaction on Revelations about Government’s Internet Surveillance program,” The Workshop on Surveillance & Technology (SAT) held with the Privacy Enhancing Technologies Symposium (PETS), June 29th, 2015. [<a href="ppts/sat-2015-upload.pptx">Slides</a>] </p>
 
 <p> “Community-Enhanced De-anonymization of Online Social Networks,” The 21st ACM Conference on Computer and Communications Security (CCS’14), Scottsdale, Arizona, USA, November 3-7, 2014. [<a href="ppts/deAnon-ccs-2014.pptx">Slides</a>] </p>
 
