--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <img align="left" src="shirin.JPG" width="150" height="178" hspace="20" vspace ="20"/> </p> <br style="clear:both" />
     <![endif]-->
   </head>
   <body>
     <div class="wrapper">
       <header>
-       <p> <img align="left" src="DSC_0006_edited.JPG" width="150" height="178" hspace="20" vspace ="20"/> </p> <br style="clear:both" />
+       <p> <img align="left" src="DSC_0006_edited.JPG" width="168" height="178" hspace="20" vspace ="20"/> </p> <br style="clear:both" />
        <p> <h2><font color="#990000">Shirin Nilizadeh, Ph.D. </font></h2> 
        <h3>Postdoctoral Researcher<br> </h3> </p>
         <p>
@@ -51,7 +52,7 @@ and Privacy Lab at IUB as a postdoctoral researcher.
   </p>    
 
 <p>
-My research interests span various topics in computer security and privacy including: 
+My research interests span various topics in computer security and privacy including: <br>
   (a) Detecting and preventing malicious and abusive activities or content, <br>
   (b) Building secure and privacy preserving (social) systems, <br>
   (c) User and data privacy in the era of big data, <br>
