--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <img align="left" src="shirin.JPG" width="150" height="178" hspace="20" vspace ="20"/> </p> <br style="clear:both" />
+I am currently a postdoctoral researcher at seclab, UC at Santa Barbara. 
+I received my Ph.D. in Security Informatics from Indiana University Bloomington in September 2014. 
+Following my doctorate, I joint the Center for Complex Networks and Systems Research (CNetS)
+and Privacy Lab at IUB as a postdoctoral researcher.
     <![endif]-->
   </head>
   <body>
@@ -45,10 +49,12 @@
 <font color="#990000"><a id="bio" class="anchor" href="#bio" aria-hidden="true"><span class="octicon octicon-link"></span></a>About Me</font>
 </h3>
   <p>
-I am currently a postdoctoral researcher at seclab, UC at Santa Barbara. 
-I received my Ph.D. in Security Informatics from Indiana University Bloomington in September 2014. 
-Following my doctorate, I joint the Center for Complex Networks and Systems Research (CNetS)
-and Privacy Lab at IUB as a postdoctoral researcher.
+    This is Shirin Nilizadeh, Postdoc in Seclab, UCSB working with Prof. Christopher Kruegel and Prof. Giovanni Vigna. 
+    I received my Ph.D. in Security Informatics from IUB under supervision of Prof. Apu Kapadia. 
+    For my Ph.D. I received a two-year fellowship from the School of Informatics and Computing. 
+    Following my doctorate and before joining the Seclab, I was a joint post-doctoral researcher at 
+    the Center for Complex Networks and Systems Research (CNetS) and Privacy Lab at Indiana University.
+
   </p>    
 
 <p>
@@ -70,7 +76,7 @@ My research interests span various topics in computer security and privacy inclu
 </h3>
 
 <p>
-<strong>Jan 2017</strong>: Gave a talk at Network Science IGERT <br> 
+<strong>Jan 2017</strong>: Gave a talk on "Twitter's Glass Ceiling" at Network Science IGERT <br> 
 <strong>July 2016</strong>: Joint the shadow program committee of ASIACCS 2017 <br> 
 <strong>Apr 2016</strong>: Received an IEEE S&P travel award  <br>
 <strong>Feb 2016</strong>: Our paper "Twitter's Glass Ceiling: The Effect of Perceived Gender on Online Visibility" got accepted to ICWSM 2016. <br>
