--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ and Privacy Lab at IUB as a postdoctoral researcher.
 <font color="#990000"><a id="bio" class="anchor" href="#bio" aria-hidden="true"><span class="octicon octicon-link"></span></a>About Me</font>
 </h3>
   <p>
-    This is Shirin Nilizadeh, Postdoc in Seclab, UCSB working with Prof. Christopher Kruegel and Prof. Giovanni Vigna. 
+    This is Shirin Nilizadeh, Postdoc in Seclab at UCSB, working with Prof. Christopher Kruegel and Prof. Giovanni Vigna. 
     I received my Ph.D. in Security Informatics from IUB under supervision of Prof. Apu Kapadia. 
     For my Ph.D. I received a two-year fellowship from the School of Informatics and Computing. 
     Following my doctorate and before joining the Seclab, I was a joint post-doctoral researcher at 
