--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ and Privacy Lab at IUB as a postdoctoral researcher.
 
 <p>
 My research interests span various topics in computer security and privacy including: <br>
-  (a) Detecting and preventing malicious and abusive activities or content, <br>
+  (a) <a href="detection-systems.html"> Detecting and preventing malicious and abusive activities or content<\a>, <br>
   (b) Building secure and privacy preserving (social) systems, <br>
   (c) User and data privacy in the era of big data, <br>
   (d) Social computing.  
