--- a/detection-systems.html
+++ b/detection-systems.html
@@ -22,7 +22,7 @@
 <section>
 <h3>
 <font color="#990000"><a id="posied" class="anchor" href="#poised" aria-hidden="true"><span class="octicon octicon-link"></span></a>POISED: Spotting Twitter Spam Off the Beaten Paths</font></h3>
-<p> Shirin Nilizadeh, Francois Labreche, Alireza Sedighian, Ali Zand, José Fernandez, Gianluca Stringhini, Christopher Kruegel, and Giovanni Vigna <\p>
+<p> Shirin Nilizadeh, Francois Labreche, Alireza Sedighian, Ali Zand, José Fernandez, Gianluca Stringhini, Christopher Kruegel, and Giovanni Vigna </p>
 </section>
 
 
