--- a/detection-systems.html
+++ b/detection-systems.html
@@ -22,12 +22,40 @@
 	<section>
 	<h3>
 	<font color="#990000"><a id="onereview" class="anchor" href="#onereview" aria-hidden="true"><span class="octicon octicon-link"></span></a>OneReview: Detecting Fake Reviews through Multiple Sources</font></h3>
-	<p> Shirin Nilizadeh, Hojjat Aghakhani, Christopher Kruegel, and Giovanni Vigna
+	<h3> Ongoing Project </h3>
+		<p> Shirin Nilizadeh, Hojjat Aghakhani, Christopher Kruegel, and Giovanni Vigna </p>
+	
+		<p>Developing OneReview, a system for detecting opinion spamming in Yelp and TripAdvisor. 
+	OneReview coordinates user-generated reviews about the same business across multiple sites. 
+	It utilizes statistical techniques such as Change Point Analysis to detect the point in each of datasets at which a significant change in stars, topic, style, or content, occurs. 
+	Abnormal change points identifies suspicious reviews and triggers further investigation of their authors' behavior.
+	 </p>
+	<h2> Methods: </h2>
+		<p>Yelp data challenge, Web mining, Data mining, Business Matching, Change-point analysis, Anomaly detection.</p> 
+
  	 </section>
 	<section>
 	<h3>
 	<font color="#990000"><a id="posied" class="anchor" href="#poised" aria-hidden="true"><span class="octicon octicon-link"></span></a>POISED: Spotting Twitter Spam Off the Beaten Paths</font></h3>
+	<h3> Submitted </h3>
 	<p> Shirin Nilizadeh, Francois Labreche, Alireza Sedighian, Ali Zand, José Fernandez, Gianluca Stringhini, Christopher Kruegel, and Giovanni Vigna </p>
+	<p> Cybercriminals have found in online social networks a propitious medium to spread spam and malicious content. Existing techniques for detecting spam include predicting the trustworthiness of accounts 
+and analyzing the content of these messages. However, advanced attackers can still successfully evade these defenses. </p>
+		
+	<p> Online social networks bring people who have personal connections or share common interests to form communities. 
+	In this paper, we first show that users within a networked community share some topics of interest. 
+	Moreover, content shared on these social network tend to propagate according to the interests of people. 
+		Dissemination paths may emerge where some communities post similar messages, based on the interests of those communities. 
+		Spam and other malicious content, on the other hand, follow different spreading patterns.</p>
+
+	<p> In this paper, we follow this insight and present POISED, a system that leverages the differences in propagation between benign and malicious messages on social networks to identify spam and other unwanted content. 
+		We test our system on a dataset of 1.3M tweets collected from 64K users, and we show that our approach is effective in detecting malicious messages, reaching 91% precision and 93% recall on our dataset. 
+		We also show that POISED's detection is more comprehensive than previous systems, by comparing it to three state-of-the-art spam detection systems that have been proposed by the research community in the past. POISED significantly outperforms each of these systems. 
+Moreover, through simulations, we show how POISED is effective in the early detection of spam messages and how it is resilient against two well-known adversarial machine learning attacks.
+		</p>
+	<h2> Methods: </h2>
+	<p> Large-scale Twitter dataset, Network science, Natural language processing, Crowd-sourced a ground-truth dataset, 
+		Machine learning, Simulated possible adversarial machine learning attacks.</p>
 	</section>
 
 	<section>
