--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ and Privacy Lab at IUB as a postdoctoral researcher.
 <p>
 My research interests span various topics in computer security and privacy including: <br>
   (a) <a href="detection-systems.html"> Detecting and preventing malicious and abusive activities or content</a>, <br>
-  (b) Building secure and privacy preserving (social) systems, <br>
+  (b) <a href="develop-systems.html">Building secure and privacy preserving (social) systems</a>, <br>
   (c) User and data privacy in the era of big data, <br>
   (d) Social computing.  
   </p>
