--- a/detection-systems.html
+++ b/detection-systems.html
@@ -62,6 +62,19 @@ Moreover, through simulations, we show how POISED is effective in the early dete
 	<h3>
 	<font color="#990000"><a id="craigslist" class="anchor" href="#craigslist" aria-hidden="true"><span class="octicon octicon-link"></span></a>Prevalence and Identification of Auto Scam on Craigslist</font></h3>
 	<p> Shirin Nilizadeh, Darya Orlova, Azadeh Nematzadeh, Apu Kapadia, and Minaxi Gupta</p>
+		<p>Craigslist ads are viewed by millions of Internet users each month, making it an attractive target
+for fraudsters and miscreants. Unsurprisingly, it has even been labeled a "cesspool of crime." In
+this project, we take a first look at automobile scam on Craigslist. Focusing on the U.S. market,
+we find scammers are exploiting the fact that posting ads on Craigslist is free. They post a large
+number of ads for the same vehicle in many cities over a short period of time, either manually
+or by leveraging the easy availability of automatic ad posting software. Interestingly, scams often
+advertise relatively new vehicles of popular makes and list them at tempting prices. They extensively
+use special characters to attract attention and randomize ad body to escape automatic detection.
+Fortunately, our study finds many features distinguishing scam from good ads. Using these features
+we show that an SVM based classifier can differentiate between scam and trustworthy ads with 99%
+accuracy.</p>
+	<h4> Methods: </h4>
+	<p> Web Mining, Data Mining, Text Mining, and Machine learning.</p>
       
 	</section>
 
