--- a/develop-systems.html
+++ b/develop-systems.html
@@ -49,7 +49,8 @@
 		<p>We built a prototype implementation of Cachet in the FreePastry simulator. To demonstrate the functionality of existing OSNs we implemented the ‘newsfeed’ application. 
 			Our evaluation demonstrates that (a) decentralized architectures for privacy preserving social networking are feasible, and
 			(b) use of social contacts for object caching results in significant performance improvements.</p>
-	<h4> Methods: Peer-to-peer social network, Data privacy and security: confidentiality, integrity and security, Distributed hash tables: FreePastry simulator, Applied crypto: Attribute-based access control and public-key crypto, Algorithm.</h4>
+		<h4> Methods:</h4>
+		<p>Peer-to-peer social network, Data privacy and security: confidentiality, integrity and security, Distributed hash tables: FreePastry simulator, Applied crypto: Attribute-based access control and public-key crypto, Algorithm.</p>
 
 	</section>
 
