--- a/index.html
+++ b/index.html
@@ -79,15 +79,16 @@ My research interests span various topics in computer security and privacy inclu
 <strong>Jan 2017</strong>: Gave a talk on "Twitter's Glass Ceiling" at Network Science IGERT <br> 
 <strong>July 2016</strong>: Joint the shadow program committee of ASIACCS 2017 <br> 
 <strong>Apr 2016</strong>: Received an IEEE S&P travel award  <br>
+<strong>Feb 2016</strong>: Joint the program committee of PETS 2017 <br>
 <strong>Feb 2016</strong>: Our paper "Twitter's Glass Ceiling: The Effect of Perceived Gender on Online Visibility" got accepted to ICWSM 2016. <br>
-<strong>Aug 2015</strong>: Joint Seclab at UCSB <br>
+<!--<strong>Aug 2015</strong>: Joint Seclab at UCSB <br>
 <strong>Jul 2015</strong>: Joint the program committee of WWW 2016 <br>
 <strong>Jul 2015</strong>: Joint the program committee of PETS 2016 <br>
 <strong>Jun 2015</strong>: Talked about "Twitter's Reaction on Revelations about Government's Internet Surveillance program" at SAT held with PETS 2015 <br>
 <strong>Apr 2015</strong>: Our paper "A Gendered Public Sphere: Who’s Heard the Most in Twitter" got accepted to 2015 Computational Social Science Summit <br>
 <strong>Jul 2014</strong>: Our paper "Community-enhanced de-anonymization of Online Social Networks" got accepted to ACM CCS 2014. <br>
 <strong>Oct 2014</strong>: Joint Privacy Lab and CNET at IUB as a postdoctoral researcher <br>
-<strong>Jun 2014</strong>: Successfully defended my Ph.D. dissertation</p>
+<strong>Jun 2014</strong>: Successfully defended my Ph.D. dissertation</p>!-->
   </section>
     <section>
 <h3>
