--- a/privacy-big-data.html
+++ b/privacy-big-data.html
@@ -57,7 +57,7 @@ Even when nodes cannot be explicitly mapped, the community structure can be mapp
 
 	<section>
 	<h3>
-	<font color="#990000"><a id="chilling" class="anchor" href="#chilling" aria-hidden="true"><span class="octicon octicon-link"></span></a>Pythia: A Privacy Aware, Peer-to-Peer Network for Social Search</font></h3>
+	<font color="#990000"><a id="chilling" class="anchor" href="#chilling" aria-hidden="true"><span class="octicon octicon-link"></span></a>Do Revelations about Internet Security have a Chilling Effect?</font></h3>
    <h4> Ongoing </h4>
    <p> Modern technologies are radically altering the privacy of everyday communication as well as people’s perception of privacy. 
    This research seeks to understand how revelations about the security of the Internet affect how people communicate. 
