--- a/privacy-big-data.html
+++ b/privacy-big-data.html
@@ -14,7 +14,7 @@
 	<section>
 	<ul id="list-nav">
 	  <li><a href="#deAnon">deAnonymization</a></li>
- 	  <li><a href="#revelations"></a></li>
+ 	  <li><a href="#revelations">Surveillance</a></li>
   	  <li><a href="#chilling">Chilling effect</a></li>
         </ul>
 	</section> 
