--- a/privacy-big-data.html
+++ b/privacy-big-data.html
@@ -22,6 +22,8 @@
 	<section>
 	<h3>
 	<font color="#990000"><a id="deAnon" class="anchor" href="#deAnon" aria-hidden="true"><span class="octicon octicon-link"></span></a>Community-Enhanced De-anonymization of Online Social Networks</font></h3>
+		<p>Shirin Nilizadeh, Apu Kapadia, and Yong-Yeol Ahn</p>
+		<p>In Proceedings of 21st ACM Conference on Computer and Communications Security (CCS ’14), Arizona, USA, 2014.</p>
 <p>Online social network providers have become treasure troves of information for marketers and researchers. 
 To profit from their data while honoring the privacy of their customers, 
 social networking services share ‘anonymized’ social network datasets, where, for example, 
@@ -39,7 +41,8 @@ Even when nodes cannot be explicitly mapped, the community structure can be mapp
 	<section>
 	<h3>
 	<font color="#990000"><a id="revelations" class="anchor" href="#revelations" aria-hidden="true"><span class="octicon octicon-link"></span></a>Twitter's Reaction on Revelations about Government's Internet Surveillance program</font></h3>
-	<h4> Published </h4>
+		<p>Shirin Nilizadeh</p>
+		<p>The Workshop on Surveillance & Technology (SAT) held with the Privacy Enhancing Technologies Symposium (PETS), June 29th, 2015.</p>
 		<p>In June 2013, Edward Snowden, a computer analyst who formerly worked for a government security contractor, provided the media with top-secret documents from the National Security Agency (NSA) about the mass collection of telephone and Internet communications. 
     Since then, mass media have been reporting on the ongoing disclosures, which have raised questions about the proper scope of government monitoring of the Internet. 
     A recent survey by PEN American Center has shown that these revelations have had an impact on people’s views about government surveillance. 
