--- a/develop-systems.html
+++ b/develop-systems.html
@@ -32,9 +32,9 @@
 	<h3>
 	<font color="#990000"><a id="cachet" class="anchor" href="#cachet" aria-hidden="true"><span class="octicon octicon-link"></span></a>Cachet: A Decentralized Architecture for Privacy Preserving Social Networking with Caching</font></h3>
 		<p>Shirin Nilizadeh, Sonia Jahid, Prateek Mittal, Nikita Borisov, and Apu Kapadia</p>
-		<h4> In Proceedings of 8th ACM International Conference on emerging Networking EXperiments and Technologies (ACM CoNEXT), Nice, France, Dec. 2012.  </h4>
+		<p> In Proceedings of 8th ACM International Conference on emerging Networking EXperiments and Technologies (ACM CoNEXT), Nice, France, Dec. 2012.  </p>
 	<h3> <font color="#990000">DECENT: A Decentralized Architecture for Enforcing Privacy in Online Social Networks </font></h3>
-		<h4> The 4th IEEE International Workshop on Security and Social Networking (SESOC '12), Lugano, Switzerland, Mar 19, 2012.</h4>
+		<p> The 4th IEEE International Workshop on Security and Social Networking (SESOC '12), Lugano, Switzerland, Mar 19, 2012.</p>
 	
 		<p>Online social networks (OSNs) such as Facebook and Google+ have transformed the way our society communi- cates. 
 			However, this success has come at the cost of user privacy; in today’s OSNs, users are not in control of their own data, and depend on OSN operators to enforce access control policies. 
@@ -59,7 +59,7 @@
 	<section>
 	<h3>
 	<font color="#990000"><a id="pythia" class="anchor" href="#pythia" aria-hidden="true"><span class="octicon octicon-link"></span></a>Pythia: A Privacy Aware, Peer-to-Peer Network for Social Search</font></h3>
-   <h4>  In Proceedings of 2011 ACM Workshop on Privacy in the Electronic Society (WPES '11), pp. 43--48, Chicago, Illinois, October 17, 2011.  </h4>
+   <p>  In Proceedings of 2011 ACM Workshop on Privacy in the Electronic Society (WPES '11), pp. 43--48, Chicago, Illinois, October 17, 2011.  </p>
 		<p>Emerging "live social search" systems such as Aardvark.com allow users to pose questions to their social network in real time. 
 			People can thus obtain answers from real humans for questions that prove too complex for web searches. 
 			Centralized systems that broker such queries and answers, however, do not provide adequate privacy. 
