--- a/privacy-big-data.html
+++ b/privacy-big-data.html
@@ -67,7 +67,7 @@ Even when nodes cannot be explicitly mapped, the community structure can be mapp
 People may view the Internet as safer or riskier than before based on various information.
 For example, in 2013, it was revealed and widely publicized that the National Security Agency was collecting emails, telephone calls, and other forms of data from Americans and citizens of other countries. 
 This research will measure the effects of such revelations on the people’s communication patterns on Twitter, and help develop a more mature understanding of how online communities are shaped by their social and political environments. 
-This understanding will ultimately allow us to better model how social and political trend</p>
+This understanding will ultimately allow us to better model how social and political trend affect how people present themselves in online environments.</p>
 		
 	<h4> Methods: </h4>
 		<p>Data Mining, Twitter user privacy, Network analysis: retweet network, community detection algorithm, Natural language processing: Topic modeling and sentimental analysis, Data Analysis</p>
