--- a/develop-systems.html
+++ b/develop-systems.html
@@ -23,10 +23,15 @@
 	<h3>
 	<font color="#990000"><a id="street" class="anchor" href="#street" aria-hidden="true"><span class="octicon octicon-link"></span></a>Street Rep: A Privacy-Preserving Reputation Aggregation System</font></h3>
 	<h4> Ongoing Project </h4>
-		
-	<h4> Methods: </h4>
-		
-
+		<p> Over the last decade, online reputation has become a central aspect of our digital lives. 
+			Most online services and communities assign a reputation score to users, based on feedback from other users about various
+criteria such as how reliable, helpful, or knowledgeable a person is. 
+While many online services compute reputation based on the same set of such criteria, users currently do not have the ability to use their reputation scores across services. As a result, users face trouble establishing themselves on new services or trusting each other on services that do not support reputation tracking.
+Existing systems that aggregate reputation scores unfortunately provide no guarantee in terms of user privacy, and their use makes user accounts linkable. 
+			Such a lack of privacy may result in embarrassment, or worse, place users in danger. </p>
+<p>In this paper, we present Street Rep, a system for aggregating user reputation scores in a privacy-preserving
+manner. Street Rep makes it possible for users to provide their aggregated scores over multiple services without revealing their respective identities on each service. We
+detail our approach, and discuss its resiliency against different types of attacks. We also built a prototype implementation of Street Rep. Our evaluation demonstrates that Street Rep (a) performs efficiently and (b) practically scales to a large user base. </p>
  	 </section>
 	<section>
 	<h3>
