--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ My research interests span various topics in computer security and privacy inclu
 </h3>
 
 <p>
+<strong>March 2017</strong>: Joint the program committee of PETS 2018 <br> 
 <strong>Jan 2017</strong>: Gave a talk on "Twitter's Glass Ceiling" at Network Science IGERT <br> 
 <strong>July 2016</strong>: Joint the shadow program committee of ASIACCS 2017 <br> 
 <strong>Apr 2016</strong>: Received an IEEE S&P travel award  <br>
